# pycppad

./: .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
example/: CMakeLists.txt
python/: CMakeLists.txt
